<resources>
    <string name="app_name">Carpooler</string>

    <string name="nav_back">Back</string>

    <string name="register_add_trip_start_location_label">Start Address</string>
    <string name="register_add_trip_end_location_label">End Address</string>
    <string name="register_add_trip_date_label">Date</string>
    <string name="register_add_trip_start_time_label">Start Time</string>
    <string name="register_add_trip_end_time_label">End Time</string>
    <string name="register_add_trip_vehicle_label">Vehicle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google">GoogleActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="database_url_title">DB URL</string>
    <string name="database_url_summary">URL for database</string>
    <string name="database_username_title">User</string>
    <string name="database_username_summary">User for Authentication</string>
    <string name="database_password_title">Password</string>
    <string name="database_password_summary">Password for DB</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_carpooler">Carpooler</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_trip_in_progress</item>
        <item>@string/nav_item_hosted_trips</item>
        <item>@string/nav_item_joined_trips</item>
        <item>@string/nav_item_vehicles</item>
    </string-array>
    <string name="nav_item_trip_in_progress">Trip In-Progress</string>
    <string name="nav_item_hosted_trips">Hosted Trips</string>
    <string name="nav_item_joined_trips">Joined Trips</string>
    <string name="nav_item_vehicles">Vehicles</string>
    <string name="title_trips">Trips</string>
    <string name="title_trip_detail">Trip Detail</string>
    <string name="title_join_trip">Join Trip</string>
    <string name="title_search_trips">Search Trips</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="save_trip">Save Trip</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="start">Start:</string>
    <string name="status">Status:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <!-- Vehicle Fragments -->
    <string name="title_vehicles">Vehicles</string>
    <string name="title_vehicle_detail">Vehicle</string>
    <string name="discard_vehicle">Discard Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="save_vehicle">Save Vehicle</string>
    <string name="save_vehicle_toast">Vehicle Saved</string>
    <string name="discard_vehicle_toast">Vehicle Discarded</string>
    <string name="vehicle_year_label">Year</string>
    <string name="vehicle_make_label">Make</string>
    <string name="vehicle_model_label">Model</string>
    <string name="vehicle_seats_label">Seats</string>
    <string name="vehicle_mpg_label">MPG</string>
    <string name="vehicle_license_label">License Plate Number</string>
    <string name="vehicle_color_label">Color</string>

    <!-- Trip Complete Fragments -->
    <string name="title_trip_complete">Trip Complete</string>
    <string name="complete_total_distance">Total Distance</string>
    <string name="complete_distance_unit">miles</string>
    <string name="complete_total_gas_cost">Total Fuel Cost</string>
    <string name="complete_cost_unit">$</string>
    <string name="complete_total_tolls">Total Tolls</string>
    <string name="complete_tolls_hint">0.00</string>
    <string name="complete_user_total">Your Total</string>

    <string name="no_trip_found">No Trips Found</string>
    <string name="no_users_found">No Users Found</string>

    <!-- Trip buttons -->
    <string name="complete_pay_host">Pay Host</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="complete_trip">Complete</string>
    <string name="start_trip">Start Trip</string>
    <string name="confirm_trip">Confirm Pickup</string>
    <string name="confirm_dropoff">Confirm Dropoff</string>
    <string name="cancel_pickup_trip">Cancel Pickup</string>
    <string name="request_trip">Request Pickup</string>

    <!-- User Buttons -->
    <string name="dropoff_user">DropOff</string>
    <string name="no_show_user">No Show</string>
    <string name="pickup_user">Pickup</string>
    <string name="navigate_pickup_user">Navigate Pickup</string>
    <string name="navigate_dropoff_user">Navigate Drop Off</string>
    <string name="accept_user">Accept User</string>
    <string name="reject_user">Reject User</string>

    <!-- User review fragment -->
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="review_request">Please review your experience with</string>

    <string name="in_progress_not_found">No Trips In Progress</string>

    <string name="user_status_pending">Pending</string>
    <string name="user_status_pending_pickup">Pending Pickup</string>
    <string name="user_status_pending_dropoff">Pending Dropoff</string>
    <string name="user_status_picked_up">Picked Up</string>
    <string name="user_status_confirmed_picked_up">Confirmed Picked Up</string>
    <string name="user_status_confirmed_for_pick_up">Confirmed For Pick Up</string>
    <string name="user_status_rejected_picked_up">Rejected For Pick Up</string>
    <string name="user_status_dropped_off">Dropped Off</string>
    <string name="user_status_confirmed_dropped_off">Confirmed Dropped Off</string>
    <string name="user_status_paid">Paid</string>
    <string name="user_status_cancelled">Cancelled</string>
    <string name="user_status_no_show">No Show</string>

</resources>