<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.carpooler.ui.activities.VehicleDetailFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/vehicle_year_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dd_year"
            android:spinnerMode="dropdown"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/vehicle_make_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dd_make"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/vehicle_model_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dd_model"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/vehicle_mpg_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mpg"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/vehicle_seats_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dd_seats"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_license_label"
            android:id="@+id/et_plate_number"
            android:inputType="textCapCharacters"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_color_label"
            android:id="@+id/et_color"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
