<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.carpooler.ui.activities.TripCompleteFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/complete_total_distance"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:text="0"
            android:id="@+id/tv_distance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:text="@string/complete_distance_unit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/complete_total_gas_cost"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/complete_cost_unit"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:text="0.00"
            android:id="@+id/tv_cost"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/complete_total_tolls"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/complete_cost_unit"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:text="0.00"
            android:visibility="gone"
            android:id="@+id/tv_toll"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/complete_tolls_hint"
            android:id="@+id/et_toll"
            android:inputType="numberDecimal"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/llTotal">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:text="@string/complete_user_total"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:text="@string/complete_cost_unit"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textAppearance="?android:textAppearanceSmall"/>

            <TextView
                android:text="0.00"
                android:id="@+id/tv_total"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textAppearance="?android:textAppearanceLarge"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Empty filler view -->
    <TextView android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/llPayPal"
        android:orientation="horizontal"
        android:gravity="center_horizontal"/>

</LinearLayout>
