<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.carpooler.ui.activities.UserReviewFragment">

    <TextView
        android:text="@string/review_request"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_margin="4dp"
            android:id="@+id/hostImage"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/startTime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:id="@+id/tv_name"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/rating"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dd_rating"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review"
            android:id="@+id/et_review"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
